--- a/setup_env.ipynb
+++ b/setup_env.ipynb
@@ -7,27 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b1454642-3c53-4490-ad03-42f6c2b1f5cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from openai import AzureOpenAI, OpenAI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7c86b15f-526e-4ecb-b977-ef2635ea9739",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
+    "import openai\n",
+    "from openai import AzureOpenAI"
    ]
   },
   {
